# ChangeLog for dev-python/python-exec
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-exec/ChangeLog,v 1.56 2013/10/17 15:26:33 jer Exp $

  17 Oct 2013; Jeroen Roovers <jer@gentoo.org> python-exec-2.0-r1.ebuild:
  Stable for HPPA (bug #487676).

  14 Oct 2013; Michał Górny <mgorny@gentoo.org> python-exec-0.9999.ebuild,
  python-exec-2.9999.ebuild:
  Switch to git-r3.

  07 Oct 2013; Michał Górny <mgorny@gentoo.org> python-exec-2.0-r1.ebuild,
  python-exec-2.9999.ebuild:
  Touch vardb after modifications as suggested by Arfrever.

*python-exec-2.0-r1 (03 Oct 2013)

  03 Oct 2013; Michał Górny <mgorny@gentoo.org> +python-exec-2.0-r1.ebuild,
  -python-exec-2.0.ebuild, python-exec-2.9999.ebuild:
  Fix unslotted python-exec deps in vardb when >=python-exec-2.0-r1 is
  installed.

  29 Sep 2013; Michał Górny <mgorny@gentoo.org> -python-exec-0.2.ebuild,
  -python-exec-0.3.ebuild:
  Drop old.

*python-exec-2.0 (17 Sep 2013)
*python-exec-2.9999 (17 Sep 2013)

  17 Sep 2013; Michał Górny <mgorny@gentoo.org> +python-exec-2.0.ebuild,
  +python-exec-2.9999.ebuild:
  Introduce python-exec:2.

*python-exec-0.9999 (15 Sep 2013)

  15 Sep 2013; Michał Górny <mgorny@gentoo.org> +python-exec-0.9999.ebuild,
  -python-exec-9999.ebuild:
  9999 -> 0.9999 to support multiple branches in the future.

  14 Apr 2013; Agostino Sarubbo <ago@gentoo.org> python-exec-0.3.1.ebuild:
  Stable for sh, wrt bug #464428

  13 Apr 2013; Agostino Sarubbo <ago@gentoo.org> python-exec-0.3.1.ebuild:
  Stable for s390, wrt bug #464428

  13 Apr 2013; Agostino Sarubbo <ago@gentoo.org> python-exec-0.3.1.ebuild:
  Stable for sparc, wrt bug #464428

  12 Apr 2013; Agostino Sarubbo <ago@gentoo.org> python-exec-0.3.1.ebuild:
  Stable for ia64, wrt bug #464428

  12 Apr 2013; Agostino Sarubbo <ago@gentoo.org> python-exec-0.3.1.ebuild:
  Stable for alpha, wrt bug #464428
